{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 28,
  "lineage": "198fbd5c-eda4-e97c-8cc3-d20a5f5686c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:internet-gateway/igw-046a433d27d0e770b",
            "id": "igw-046a433d27d0e770b",
            "owner_id": "157931043046",
            "tags": {
              "Name": "terraform-runner-igw"
            },
            "tags_all": {
              "Name": "terraform-runner-igw"
            },
            "vpc_id": "vpc-0f0afd6b99afc13ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:route-table/rtb-0e199ea0906e947cb",
            "id": "rtb-0e199ea0906e947cb",
            "owner_id": "157931043046",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046a433d27d0e770b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-runner-rt"
            },
            "tags_all": {
              "Name": "terraform-runner-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0afd6b99afc13ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dd6d2f3837e48f4",
            "route_table_id": "rtb-0e199ea0906e947cb",
            "subnet_id": "subnet-000323cac7d44d8a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_route_table",
            "aws_subnet.terraform_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_builder_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:security-group/sg-08115a5cff403273f",
            "description": "Security group for Project Builder EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08115a5cff403273f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "project-builder-sg",
            "name_prefix": "",
            "owner_id": "157931043046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-builder-sg"
            },
            "tags_all": {
              "Name": "project-builder-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0afd6b99afc13ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:security-group/sg-080e6b04d26d63f42",
            "description": "Security group for Terraform runner EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080e6b04d26d63f42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-runner-sg",
            "name_prefix": "",
            "owner_id": "157931043046",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-runner-sg"
            },
            "tags_all": {
              "Name": "terraform-runner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0afd6b99afc13ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:subnet/subnet-000323cac7d44d8a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000323cac7d44d8a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "157931043046",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-runner-subnet"
            },
            "tags_all": {
              "Name": "terraform-runner-subnet"
            },
            "vpc_id": "vpc-0f0afd6b99afc13ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:157931043046:vpc/vpc-0f0afd6b99afc13ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bea29be0a22eb0c",
            "default_route_table_id": "rtb-0d8225b1f7bb14307",
            "default_security_group_id": "sg-0bce61b63e3f425fa",
            "dhcp_options_id": "dopt-061c3280e75af05f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0afd6b99afc13ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8225b1f7bb14307",
            "owner_id": "157931043046",
            "tags": {
              "Name": "terraform-runner-vpc"
            },
            "tags_all": {
              "Name": "terraform-runner-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}